--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-json-api-paginate": "^1.14",
         "yaza/laravel-repository-service": "^4.0"
     },
     "require-dev": {
