--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "optimize-all": [
+            "@php artisan optimize:clear --ansi",
+            "@php artisan optimize --ansi",
+            "@php artisan icons:cache --ansi",
+            "@php artisan filament:cache-components --ansi"
         ]
     },
     "extra": {
