--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ DB_PASSWORD=Akubisa-1
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+DEBUGBAR_ENABLED=true
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
@@ -64,3 +66,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=1.0
+VITE_SENTRY_DSN_PUBLIC="${SENTRY_LARAVEL_DSN}"
