--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
-        "sentry/sentry-laravel": "^4.4",
-        "spatie/laravel-json-api-paginate": "^1.14"
+        "sentry/sentry-laravel": "^4.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
