[ADD] endpoint kelas from simdiklat

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ DB_DATABASE=wisma_vedc
 DB_USERNAME=user_pg
 DB_PASSWORD=Akubisa-1
 
+SECOND_DB_CONNECTION=mysql
+SECOND_DB_HOST=127.0.0.1
+SECOND_DB_PORT=3306
+SECOND_DB_DATABASE=simdiklat_boe_real
+SECOND_DB_USERNAME=root
+SECOND_DB_PASSWORD=
+
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
